# qa-testing-page

./: Makefile  pyproject.toml
tests/: conftest.py  defects-report.md  test-cases.md
tests/features/: Company_Management.feature  Property_Management.feature
tests/pages/: BasePage.py  CompaniesPage.py  CreateCompanyPage.py  CreatePropertyPage.py  PropertiesPage.py  TopBar.py
tests/steps/: test_company_steps.py  test_property_steps.py  test_runner.py  test_top_bar_steps_steps.py
