[project]
name = "qa-testing-page"
version = "0.1.0"
description = "QA Automation Test App for Leasey.AI"
authors = [
    {name = "Leasey.AI"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "selenium (>=4.34.2,<5.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pytest-html (>=4.1.1,<5.0.0)",
    "pytest-bdd (>=8.1.0,<9.0.0)",
    "assertpy (>=1.1,<2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests/steps",
]
bdd_features_base_dir = "tests/features"
pythonpath = "."